# mcp-quickchart

./: Dockerfile  README.md  pyproject.toml  requirements.txt  test.py
.github/workflows/: publish-docker-image.yaml
.roo/: mcp.json
mcpquickchart/: __init__.py  __main__.py  chart.py  dataset.py  server.py
